# wortlaut

./: .editorconfig  .gitattributes  .gitignore  .importlinter  .mirror-check  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  user-story.md
.github/workflows/: ci.yml
docs/: architecture.md  datamodel.md  development.md  engineering.md  legal.md  rules.md  security.md
docs/adr/: 0001-language-runtime.md  0002-build-tool-uv.md  0003-persistence.md  0004-async-web.md  0005-object-storage-worm.md  0006-testing-tdd.md  0007-worm-lock-mode.md  README.md
docs/design/: README.md  demo-page-mockup.html
docs/templates/: increment-spec.md
migrations/: env.py
migrations/versions/: 0001_enable_pgvector.py  0002_ingest_adapter_source.py  0003_span_schema.py
scripts/: check_no_llm_output.py  check_sonar_pr_issues.py
specs/: 0002-db-schema-phase0.md  0003-content-hash-dedup.md  0004-fremdarchiv-client.md  0005-worm-storage.md  0006-ingest-adapter-dip.md  0007-ingest-pipeline-kern.md  0008-verify-fundament.md  0016-persistence-foundation.md  0025-fetch-pdf-validation.md
src/wortlaut/: __init__.py
src/wortlaut/archive/: __init__.py  archiver.py  pinned.py  ssrf.py
src/wortlaut/ingest/: dip.py  (+4 more)
tests/: test_smoke.py
tests/integration/: conftest.py  test_db_schema.py  test_persistence.py  test_pipeline_ingest.py  test_serving_api.py  test_source_dedup.py  test_span_ingest.py  test_span_schema.py  test_verify_integration.py  test_worm_storage.py
tests/live/: test_archive_live.py
tests/unit/: test_archiver.py  test_dip_adapter.py  test_dip_context.py  test_dip_fetch_validation.py  test_dip_parsing.py  test_engine.py  test_hashing.py  test_ingest_layering.py  test_models_mapping.py  test_pinned.py  test_pipeline_order.py  test_serving_helpers.py  test_settings.py  test_span_hash.py  test_ssrf.py  test_verify.py  test_worm_api_surface.py
website/: README.md  datenschutz.html  impressum.html  index.html  styles.css
(+21 files in other folders)
